updated navbar/index design

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
-<body class="flex flex-col min-h-screen">
+<body class="flex flex-col min-h-screen bg-pink-200">
   <!-- Header -->
   <div id="navbar"></div>
   <!-- Main content -->
@@ -24,19 +28,19 @@
         <p class="py-3">
           Guess what will happen during today's lecture and be crowned the winner!
         </p>
-        <p class="py-16">Invite or join your friend's room below</p>
+        <p class="py-8">Invite or join your friend's room below</p>
       </div>
     </div>
 
     <!-- Buttons -->
     <div class="flex justify-center mt-12 gap-16 py-3">
-      <a href="create.html" class="bg-green-500 text-white font-bold py-6 px-16 rounded">Create</a>
-      <a href="join.html" class="bg-blue-500 text-white font-bold py-6 px-16 rounded">Join</a>
+      <a href="create.html" class="bg-red-500 text-white font-bold py-6 px-16 rounded">Create</a>
+      <a href="join.html" class="bg-red-500 text-white font-bold py-6 px-16 rounded">Join</a>
     </div>
   </div>
 
   <!-- Rule Link-->
-  <footer class="flex justify-center mt-32">
+  <footer class="flex justify-center mt-12">
     <a href="rules.html" class="font-medium  text-fg-brand hover:underline hover:text-indigo-700">Rules</a>
   </footer>
 
