--- a/create.html
+++ b/create.html
@@ -62,7 +62,7 @@
             </div>
             <!-- Button -->
             <div class="flex justify-center mt-12">
-                <button class="py-3 px-10 rounded-2xl bg-green-400 text-white border-2">
+                <button id="createRoomBtn" class="py-3 px-10 rounded-2xl bg-green-400 text-white border-2">
                     Start Clash
                 </button>
             </div>
@@ -70,5 +70,6 @@
         </section>
     </main>
 </body>
-<script src="./src/room.js"></script>
+<script type="module" src="./src/room.js"></script>
+
 </html>
