--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         </p>
         <p class="py-3">Invite or join your friend's room below</p>
       </div>
+
+    </div>
+      <!-- YouTube Video -->
+    <div class="flex justify-center mt-8">
+      <iframe 
+        width="560" 
+        height="315" 
+        src="https://www.youtube.com/embed/JZjVyjXU69E" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
+      </iframe>
     </div>
 
     <!-- Buttons -->
